--- a/chess-openings/Makefile
+++ b/chess-openings/Makefile
@@ -2,9 +2,10 @@ CHESSBOARDS_PER_ROW := "5"
 
 all: chess-openings.pdf
 
-chess-openings.pdf: src/open.tex src/semi.tex src/closed.tex src/indian.tex chess-openings.tex
+chess-openings.pdf: src/open.tex src/semi.tex src/closed.tex src/indian.tex src/flank.tex chess-openings.tex
 	mkdir -p build
 	pdflatex --output-directory=build chess-openings.tex
+	cp build/chess-openings.pdf .
 
 src/open.tex: src/*-o-*.tex
 	./tools/converter.bash $(CHESSBOARDS_PER_ROW) src/open.tex o
@@ -18,5 +19,8 @@ src/closed.tex: src/*-c-*.tex
 src/indian.tex: src/*-n-*.tex
 	./tools/converter.bash $(CHESSBOARDS_PER_ROW) src/indian.tex n
 
+src/flank.tex: src/*-f-*.tex
+	./tools/converter.bash $(CHESSBOARDS_PER_ROW) src/flank.tex f
+
 clean:
-	rm -rf build chess-openings.pdf src/open.tex src/semi.tex src/closed.tex src/indian.tex
+	rm -rf build chess-openings.pdf src/open.tex src/semi.tex src/closed.tex src/indian.tex src/flank.tex 
