--- a/chess-openings/Makefile
+++ b/chess-openings/Makefile
@@ -1,11 +1,16 @@
 CHESSBOARDS_PER_ROW := "5"
 
-all: chess-openings.pdf
+all: chess-openings.pdf chess-openings-beans.pdf
 
 chess-openings.pdf: src/open.tex src/semi.tex src/closed.tex src/indian.tex src/flank.tex chess-openings.tex
 	mkdir -p build
 	pdflatex --output-directory=build chess-openings.tex
 	cp build/chess-openings.pdf .
+
+chess-openings-beans.pdf: src/open.tex src/semi.tex src/closed.tex src/indian.tex src/flank.tex chess-openings-beans.tex
+	mkdir -p build
+	pdflatex --output-directory=build chess-openings-beans.tex
+	cp build/chess-openings-beans.pdf chess-openings-beans.pdf
 
 src/open.tex: src/*-o-*.tex
 	./tools/converter.bash $(CHESSBOARDS_PER_ROW) src/open.tex o
@@ -23,4 +28,4 @@ src/flank.tex: src/*-f-*.tex
 	./tools/converter.bash $(CHESSBOARDS_PER_ROW) src/flank.tex f
 
 clean:
-	rm -rf build chess-openings.pdf src/open.tex src/semi.tex src/closed.tex src/indian.tex src/flank.tex 
+	rm -rf build chess-openings.pdf chess-openings-beans.pdf src/open.tex src/semi.tex src/closed.tex src/indian.tex src/flank.tex 
